Address review comments: fix URL validation, remove UrlBasedFetcher, update CHANGELOG, use withField, and ensure locale-safe handling